[package]
name = "test_timers_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = {version = "0.6.0", features = ["timers"]}
ic-cdk-macros = "0.6.0"
